--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
      <head>
-          <title>dojo clicker</title>
+          <title>Dojo Clicker</title>
               <link rel="stylesheet" href="style.css" />
+          body {
+    background-color: yellow;
+}
 
           </head>
            <body>
-               <h2>dojo clicker</h2>
+                <center><h2>Dojo Clicker</h2></center>
               <div id="stylesheet" href="style.css" />
               <div id = "cookie"></div>
               <script src="game.js>"></script>
