--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,9 @@
           </head>
            <body>
                 <center><h2>Dojo Clicker</h2></center>
-              <div id="stylesheet" href="style.css" />
-              <div id = "cookie"></div>
+                <hr></hr>
+             <center> <div id="stylesheet" href="style.css" />
+              <div id = "cookie"></div></center>
               <script src="game.js>"></script>
               
                </body>
