--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,18 @@
      <head>
           <title>Dojo Clicker</title>
               <link rel="stylesheet" href="style.css" />
-          body {
-    background-color: yellow;
-}
 
           </head>
            <body>
+                <head>
+                     <style>
+                          body {
+
+    background-color: yellow;
+
+}
+                     </style>
+                </head>
                 <center><h2>Dojo Clicker</h2></center>
                 <hr></hr>
              <center> <div id="stylesheet" href="style.css" />
