--- a/Index.html
+++ b/Index.html
@@ -2,19 +2,23 @@
 <html>
      <head>
           <title>Dojo Clicker</title>
-              <link rel="stylesheet" href="style.css" />
-
-          </head>
-           <body>
-                <head>
-                     <style>
-                          body {
+          <body>
+               
+               <style>
+                    <head>
+          body {
 
     background-color: yellow;
 
 }
-                     </style>
-                </head>
+                    </head>
+               </style>
+          </body>
+              <link rel="stylesheet" href="style.css" />
+
+          </head>
+           <body>
+                
                 <center><h2>Dojo Clicker</h2></center>
                 <hr></hr>
              <center> <div id="stylesheet" href="style.css" />
